# PinkEd

./: CMakeLists.txt
src/: chunk.c  chunk.h  color.h  input_stream.c  input_stream.h  layer.c  layer.h  output_stream.c  output_stream.h  pinked.c
